--- a/app/src/main/res/layout/item_video_preview.xml
+++ b/app/src/main/res/layout/item_video_preview.xml
@@ -11,6 +11,8 @@
         android:src="@drawable/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
+        android:scaleType="centerCrop"
+        android:background="@drawable/bg_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
