--- a/app/src/main/res/layout/wave_bottom_navigation_view.xml
+++ b/app/src/main/res/layout/wave_bottom_navigation_view.xml
@@ -2,28 +2,25 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@color/purple030330">
 
-    <VideoView
-        android:id="@+id/videoPreview"
-        android:layout_width="wrap_content"
+    <com.duong.my_app.ui.custom.bottombar.BottomItemLayout
+        android:id="@+id/tabTheme"
+        android:layout_width="@dimen/size_0"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/tabAppManager"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/imgLogo"
-        android:layout_width="wrap_content"
+    <com.duong.my_app.ui.custom.bottombar.BottomItemLayout
+        android:id="@+id/tabAppManager"
+        android:layout_width="@dimen/size_0"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_logo"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/tabTheme"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
