--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.MyTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
+    <style name="Theme.MyGame" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:background">@color/black</item>
         <item name="android:textSize">@dimen/text_size_14</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:lines">1</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:gravity">center</item>
     </style>
 </resources>
