--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="purple030330">#030330</color>
     <color name="green4DEC9B">#4DEC9B</color>
     <color name="gray928F8F">#928F8F</color>
+    <color name="grayC4CDE2">#C4CDE2</color>
+    <color name="grayA3A3A3">#A3A3A3</color>
 </resources>
