--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/previewFragment"
         android:name="com.duong.my_app.ui.fragment.PreviewFragment"
-        android:label="PreviewFragment" >
+        android:label="PreviewFragment">
         <action
             android:id="@+id/actionPreviewToMain"
             app:destination="@id/mainFragment"
@@ -16,13 +16,23 @@
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
             app:popExitAnim="@anim/to_right"
-            app:popUpToInclusive="true"
-            app:popUpTo="@id/previewFragment"/>
+            app:popUpTo="@id/previewFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.duong.my_app.ui.fragment.MainFragment"
         android:label="fragment_main"
-        tools:layout="@layout/fragment_main" />
+        tools:layout="@layout/fragment_main">
+
+        <action
+            android:id="@+id/actionMainToImage"
+            app:destination="@id/imageFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/imageFragment"
+        android:name="com.duong.my_app.ui.fragment.ImageFragment"
+        android:label="ImageFragment" />
 </navigation>
