--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -18,14 +17,14 @@
         android:id="@+id/btnRequest"
         android:layout_width="@dimen/size_0"
         android:layout_height="@dimen/size_0"
+        android:background="@drawable/bg_btn"
         android:gravity="center"
         android:includeFontPadding="false"
         android:lines="1"
-        android:visibility="gone"
-        android:background="@drawable/bg_btn"
         android:paddingHorizontal="@dimen/size_5"
-        android:textColor="@color/bg_btn"
         android:text="@string/click_request_permission"
+        android:textColor="@color/bg_btn"
+        android:visibility="gone"
         app:autoSizeMaxTextSize="@dimen/text_size_20"
         app:autoSizeMinTextSize="@dimen/text_size_1"
         app:autoSizeTextType="uniform"
@@ -40,23 +39,19 @@
         android:id="@+id/bottomNavView"
         android:layout_width="@dimen/size_0"
         android:layout_height="@dimen/size_70"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/loading"
-        android:layout_width="@dimen/size_0"
-        android:layout_height="@dimen/size_0"
+    <include
+        android:id="@+id/viewLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        layout="@layout/view_loading"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.3"
-        app:lottie_autoPlay="true"
-        android:visibility="gone"
-        app:lottie_fileName="loading.json"
-        app:lottie_loop="true" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
